Adjust hover state to fix issue button colour on mobile

--- a/support-frontend/assets/pages/digital-subscription-landing/components/digitalSubscriptionLanding.scss
+++ b/support-frontend/assets/pages/digital-subscription-landing/components/digitalSubscriptionLanding.scss
@@ -524,9 +524,11 @@
     }
   }
 
-  button:hover {
+  @include mq($from: desktop) {
+    button:hover {
       background-color: #f6f6f6;
     }
+  }
 
   .product-block__button--hide {
     border-top: none;
